--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 h1 {
     color: darkblue;
-    background-color: blue
+    background-color: blue;
 }
 
 .first-para {
@@ -15,4 +15,4 @@ h1 {
 .third-para {
     background-color: aquamarine;
 
-}
+}           
